Committing initial fix for MH-6312.  VM building should now be basically functional.
git-svn-id: https://opencast.jira.com/svn/MH/trunk@12097 e6edf6fb-f266-4316-afb4-e53d95876a76